--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   deploy-backend:
-    runs-on: ubuntu-latest-4-cores
+    runs-on: ubuntu-latest
     environment: ${{ github.ref_name }}
 
     steps:
