--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    branches:
-      - main
 
 permissions:
   id-token: write
@@ -45,6 +43,10 @@ jobs:
 
       - name: Install npm dependencies
         run: npm ci
+
+      # Setup Docker Buildx for multi-platform builds
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3.12.0
 
       # Backend deployment (includes Docker build, ECR push, Lambda update)
       - name: Deploy backend with Amplify pipeline
