--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,15 +44,11 @@ jobs:
       - name: Install npm dependencies
         run: npm ci
 
-      # Setup Docker Buildx for multi-platform builds
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3.12.0
-
       # Backend deployment (includes Docker build, ECR push, Lambda update)
       - name: Deploy backend with Amplify pipeline
         env:
           CI: 1
-          DOCKER_DEFAULT_PLATFORM: linux/arm64
+          DOCKER_DEFAULT_PLATFORM: linux/amd64
         run: |
           npx ampx pipeline-deploy \
             --branch ${{ github.ref_name }} \
