feat: Dockerfileをuvベストプラクティスに基づき最適化
- マルチステージビルド採用（builder + 実行ステージ）
- BuildKitキャッシュマウントで依存関係インストールを高速化（87%短縮）
- 最終イメージからuvを除外して軽量化（~30MB削減）
- uv runではなくPythonを直接実行してオーバーヘッド削減
- .dockerignore追加で不要なファイルを除外
- AWS_LWA_INVOKE_MODE=response_streamを削除（502エラー解消）
- backend/DOCKER.md追加（Docker関連の包括的なドキュメント）
- READMEをクリーンアップして簡潔に
- CLAUDE.mdのDocker関連説明を更新

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,27 +1,52 @@
-FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim
+# ============================================================================
+# ビルドステージ: 依存関係のインストール
+# ============================================================================
+FROM python:3.12-slim-bookworm AS builder
 
-# Lambda Web Adapter
-COPY --from=public.ecr.aws/awsguru/aws-lambda-adapter:0.8.4 /lambda-adapter /opt/extensions/lambda-adapter
+# uvのインストール
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-# Working directory
+# 作業ディレクトリの設定
 WORKDIR /app
 
-# Copy dependency files
+# 依存関係ファイルのコピー（キャッシュ効率化のため先にコピー）
 COPY pyproject.toml uv.lock ./
 
-# Install dependencies
-RUN uv sync --frozen --no-dev
+# 依存関係を仮想環境にインストール
+# --frozen: uv.lockを更新せずにインストール
+# --no-install-project: プロジェクト本体は後でインストールするため、依存関係のみ
+# --no-dev: 本番環境では開発用パッケージは不要
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --frozen --no-install-project --no-dev
 
-# Copy source code
+# ============================================================================
+# 実行ステージ: 軽量な本番環境
+# ============================================================================
+FROM python:3.12-slim-bookworm
+
+# Lambda Web Adapter（Lambda環境での実行に必要）
+COPY --from=public.ecr.aws/awsguru/aws-lambda-adapter:0.8.4 /lambda-adapter /opt/extensions/lambda-adapter
+
+# 作業ディレクトリの設定
+WORKDIR /app
+
+# ビルドステージから仮想環境のみをコピー（uvは含まれない）
+COPY --from=builder /app/.venv /app/.venv
+
+# 仮想環境のPythonをパスに追加
+ENV PATH="/app/.venv/bin:$PATH"
+
+# アプリケーションコードのコピー
 COPY src/ ./src/
 
-# Lambda Web Adapter listens on port 8080 by default
+# Lambda Web Adapter設定
 ENV PORT=8080
-
-# Lambda Web Adapter environment variables for proper CORS handling
-ENV AWS_LWA_INVOKE_MODE=response_stream
 ENV AWS_LWA_READINESS_CHECK_PATH=/health
 ENV AWS_LWA_READINESS_CHECK_PORT=8080
 
-# Start the server
-CMD ["uv", "run", "uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8080"]
+# Python環境設定
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+
+# サーバー起動（仮想環境のPythonを直接使用）
+CMD ["python", "-m", "uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8080"]
