refactor: move backend to amplify/api

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           filters: |
             backend:
-              - 'backend/**'
-              - 'amplify/**'
+              - 'amplify/api/**'
+              - 'amplify/backend.ts'
               - 'package.json'
               - 'package-lock.json'
             frontend:
